fixed horizontal scroll

--- a/src/css/welcome.css
+++ b/src/css/welcome.css
@@ -52,8 +52,8 @@ cursor: pointer;
 
 .fl-button svg,
 .fl-button svg * {
-  width: 20px;
-  height: 20px;
+  width: 24px;
+  height: 24px;
   fill: currentColor;
   color: inherit;
   vertical-align: middle;
